# codex-memory

./: .gitignore  README.md  pyproject.toml
codex_memory/: __init__.py  cli.py  config.py  exporter.py  init_project.py  search.py
codex_memory/templates/: default_config.toml  run_codex.cmd  run_codex.ps1  run_codex.sh
tests/: test_codex_memory.py
